<resources>
    <string name="app_name">My Application new</string>
    <string name="logo_name">Attendance Application</string>
    <string name="Slogan">We will hwlp you to find your Attendance!</string>
    <string name="lets_get_started">LETS GET STARTED</string>
    <string name="slider1decs">It is a long established fact that a reader will be distracted by the readable content.</string>
    <string name="slider2decs">Lorem ipsum dolor sit amet. Aut reiciendis ipsum non corrupti quas aut eligendi omnis est quia voluptatem.</string>
    <string name="slider3decs">Sed veritatis consequatur in quia incidunt ea iusto provident.</string>
    <string name="slider4decs">Est modi ut aliquid rerum qui veritatis commodi non alias sequi id architecto rerum!</string>
    <string name="title1">First Title .</string>
    <string name="title2">Second Title .</string>
    <string name="title3">Third Title .</string>
    <string name="title4">Fourth Title .</string>

    <string name="skip_btn">Skip</string>
    <string name="login">Login</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create Account</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="division">Division</string>
    <string name="roll_no">Roll No</string>
    <string name="email_id">Email ID</string>
    <string name="attendance">attendance</string>
    <string name="dldm">DLMP</string>
    <string name="seminar">SEMINAR II</string>
    <string name="ptrp">PTRP</string>
    <string name="bhr">BHR</string>
    <string name="coa">COA</string>
    <string name="os">OS</string>
    <string name="todo">TODO</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_to_see_attendance">Sign in to see attendance</string>

</resources>